make sure image crop takes up all the appropriate space on mobile

--- a/wp-content/themes/make-learn/scss/panels.scss
+++ b/wp-content/themes/make-learn/scss/panels.scss
@@ -30,7 +30,7 @@
 	.image-crop {
 		max-height: 225px;
 		overflow: hidden;
-		width: 100%;
+		img { width: 100%; }
 	}
 	.column-info {
 		padding: 0 10px;
